<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/messageLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/profileTv"
            android:src="@drawable/ic_defult_img"/>
        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:id="@+id/messageTv"
            android:padding="15dp"
            android:layout_weight="1"
            android:background="@drawable/bg_receiver"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:text="@string/his_message"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeTv"
            android:textSize="12sp"
            android:textColor="@color/colorBlack"
            android:text="@string/_02_03_2019_05_59pm"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/isSeenTv"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:text="@string/delivered"
        />

</LinearLayout>