<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/pTitleEt"
            android:background="@drawable/editextstyle"
            android:padding="10dp"
            android:hint="@string/enter_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/pImageIv"
            android:background="@color/colorwhite"
            android:minHeight="200dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="upload medicine" />

        <EditText
            android:id="@+id/pDescriptionEt"
            android:background="@drawable/editextstyle"
            android:padding="10dp"
            android:hint="@string/enter_description"
            android:inputType="textCapSentences|textMultiLine"
            android:minHeight="120dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/pUploadBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="130dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@drawable/bg_ui"
            android:text="@string/upload"
            android:layout_gravity="end"/>
    </LinearLayout>

</ScrollView>