<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhite"
    tools:context=".LoginActivity"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bgHeader"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/header_login"
        />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:elevation="5dp"
        android:text="@string/welcome_to_healthcare_apps_doctor"
        android:textColor="@color/colorwhite"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDesc"
        android:transitionName="tvLogin"
        android:layout_alignLeft="@+id/tvDesc"
        android:elevation="5dp"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/circle1"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_below="@+id/bgHeader"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-80dp"
        android:layout_marginRight="-100dp"
        android:src="@drawable/circletransparant" />

    <ImageView
        android:id="@+id/circle2"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="-100dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/circletransparant" />


    <ImageView
        android:id="@+id/circle4"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="150dp"
        android:layout_marginBottom="-50dp"
        android:src="@drawable/circletransparant" />

    <!-- EditText Input Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/EmailTil"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/EmailEt"
            android:padding="15dp"
            android:drawableRight="@drawable/ic_defult_email"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- EditText Input Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/passwordTil"
        android:layout_below="@id/EmailTil"
        app:passwordToggleEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/passeordEt"
            android:padding="15dp"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- Button  Register-->
    <Button
        android:text="@string/loginmain"
        android:id="@+id/LoginBtn"
        android:layout_below="@id/passwordTil"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorwhite"
        android:layout_width="250dp"
        android:background="@drawable/bg_ui"
        android:drawableLeft="@drawable/ic_defult_login"
        android:layout_height="wrap_content"
        android:paddingLeft="11dp"
        android:paddingStart="11dp" />

    <ImageButton
        android:id="@+id/btRegister"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@+id/EmailTil"
        android:background="@drawable/bg_ui"
        android:src="@drawable/ic_add"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/recoverPassTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/forget_password_recover"
        android:layout_above="@id/notHave_Account"
        android:layout_centerHorizontal="true"

        android:textColor="@color/colorBlack"/>
    <!-- TextView  Login-->
    <TextView
        android:id="@+id/notHave_Account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_have_account_register"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorBlack"
        android:layout_marginBottom="20dp"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleLoginBtn"
        android:layout_width="250dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_below="@id/LoginBtn"
        android:layout_marginTop="17dp"

        >

    </com.google.android.gms.common.SignInButton>






</RelativeLayout>