<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThereProfileActivity"
    android:background="#F1EDED">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/coverIv"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="fitXY"
                android:background="#81D4FA">
            </ImageView>
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:layout_marginTop="100dp">
                <ImageView
                    android:id="@+id/avaterIv"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="#4FC3F7"
                    android:padding="5dp"
                    android:src="@drawable/ic_defult_img_white"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/colortrans"
                    >
                    <TextView
                        android:id="@+id/nameTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/name"
                        android:layout_marginTop="10dp"
                        android:textSize="25sp"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/colorWhite"/>
                    <TextView
                        android:id="@+id/emailTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/email"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/colorWhite"/>
                    <TextView
                        android:id="@+id/phoneTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/phone"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_posts"
                android:layout_below="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </RelativeLayout>

    </ScrollView>
